--- a/asset/index.html
+++ b/asset/index.html
@@ -20,7 +20,37 @@
   </head>
   <body>
     <!-- Navbar-->
+    <header class="header" id="header">
+      <nav class="navbar container">
+        <a href="./index.html"> <h2 class="logo">NewFlash</h2> </a>
 
+        <div class="menu" id="menu">
+          <ul class="list">
+            <li class="list-item">
+              <a href="#" class="lisk-link current">Home</a>
+            </li>
+            <li class="list-item">
+              <a href="#" class="lisk-link">Football</a>
+            </li>
+            <li class="list-item">
+              <a href="#" class="lisk-link">Stocks</a>
+            </li>
+            <li class="list-item">
+              <a href="#" class="lisk-link">Weather news</a>
+            </li>
+            <li class="list-item">
+              <a href="#" class="lisk-link">Crypto</a>
+            </li>
+            <li class="list-item screen-lg-hidden">
+              <a href="#" class="lisk-link">More News</a>
+            </li>
+            <li class="list-item screen-lg-hidden">
+              <a href="#" class="lisk-link">IDK</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
     <!--Search-->
 
     <!--Featured Article-->
