--- a/asset/index.html
+++ b/asset/index.html
@@ -49,6 +49,32 @@
             </li>
           </ul>
         </div>
+
+        <div class="list list-right">
+          <button class="btn place-items-center" id="themetoggle-btn">
+            <i class="ri-sun-line sun-icon"></i>
+            <i class="ri-moon-line moon-icon"></i>
+          </button>
+
+          <button class="btn place-items-center" id="search-icon">
+            <i class="ri-search-line"></i>
+          </button>
+
+          <button
+            class="btn place-items-center screen-lg-hidden menu-toggle-icon"
+            id="menu-toogle-icon"
+          >
+            <i class="ri-menu-3-line open-menu-icon"></i>
+            <i class="ri-close-line close-menu-icon"></i>
+          </button>
+
+          <a href="#" class="list-link screen-sm-hidden">Sign In</a>
+          <a
+            href="#"
+            class="list-link screen-sm-hidden btn sign-up-btn fancy-border"
+            ><span>Sign Up</span></a
+          >
+        </div>
       </nav>
     </header>
     <!--Search-->
