--- a/asset/index.html
+++ b/asset/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="list list-right">
-          <button class="btn place-items-center" id="themetoggle-btn">
+          <button class="btn place-items-center" id="theme-toggle-btn">
             <i class="ri-sun-line sun-icon"></i>
             <i class="ri-moon-line moon-icon"></i>
           </button>
@@ -62,7 +62,7 @@
 
           <button
             class="btn place-items-center screen-lg-hidden menu-toggle-icon"
-            id="menu-toogle-icon"
+            id="menu-toggle-icon"
           >
             <i class="ri-menu-3-line open-menu-icon"></i>
             <i class="ri-close-line close-menu-icon"></i>
