--- a/asset/index.html
+++ b/asset/index.html
@@ -98,7 +98,60 @@
     </div>
 
     <!--Featured Article-->
+    <section class="featured-articles section-header-offset">
+      <div class="featured-articles-container container d-grid">
+        <div class="featured-content d-grid">
+          <div class="headline-banner">
+            <h3 class="headline fancy-border">
+              <span class="place-items-center">Breaking News</span>
+            </h3>
+            <span class="headline-description"
+              >Mountain Top University Hotties...</span
+            >
+          </div>
+          <a href="" class="article featured-article featured-article-1">
+            <img src="./img/1.jpg" alt="" class="article-image" />
+            <span class="article-category">Animal</span>
 
+            <div class="article-data-container">
+              <div class="article-data"></div>
+              <span>Dec 5th 2022</span>
+              <span class="article-data-spacer"></span>
+              <span>8 min read</span>
+            </div>
+            <h3 class="title article-title">Is Agric the future?</h3>
+          </div>
+        </a>
+
+         <a href="" class="article featured-article featured-article-1">
+            <img src="./img/1.jpg" alt="" class="article-image" />
+            <span class="article-category">Animal</span>
+
+            <div class="article-data-container">
+              <div class="article-data"></div>
+              <span>Dec 5th 2022</span>
+              <span class="article-data-spacer"></span>
+              <span>8 min read</span>
+            </div>
+            <h3 class="title article-title">Is Agric the future?</h3>
+          </div>
+        </a>
+
+         <a href="" class="article featured-article featured-article-1">
+            <img src="./img/1.jpg" alt="" class="article-image" />
+            <span class="article-category">Animal</span>
+
+            <div class="article-data-container">
+              <div class="article-data"></div>
+              <span>Dec 5th 2022</span>
+              <span class="article-data-spacer"></span>
+              <span>8 min read</span>
+            </div>
+            <h3 class="title article-title">Is Agric the future?</h3>
+          </div>
+        </a>
+      </div>
+    </section>
     <!--Quick read-->
 
     <!--Older Post-->
