--- a/asset/index.html
+++ b/asset/index.html
@@ -120,11 +120,14 @@
               <span>8 min read</span>
             </div>
             <h3 class="title article-title">Is Agric the future?</h3>
-          </div>
-        </a>
+          </a>
 
-         <a href="" class="article featured-article featured-article-1">
-            <img src="./img/1.jpg" alt="" class="article-image" />
+          <a href="" class="article featured-article featured-article-2">
+            <img
+              src="./img/istockphoto-1313584277-1024x1024.jpg"
+              alt=""
+              class="article-image"
+            />
             <span class="article-category">Animal</span>
 
             <div class="article-data-container">
@@ -134,11 +137,13 @@
               <span>8 min read</span>
             </div>
             <h3 class="title article-title">Is Agric the future?</h3>
-          </div>
-        </a>
-
-         <a href="" class="article featured-article featured-article-1">
-            <img src="./img/1.jpg" alt="" class="article-image" />
+          </a>
+          <a href="" class="article featured-article featured-article-3">
+            <img
+              src="./img/istockphoto-1313584277-1024x1024.jpg"
+              alt=""
+              class="article-image"
+            />
             <span class="article-category">Animal</span>
 
             <div class="article-data-container">
@@ -146,10 +151,11 @@
               <span>Dec 5th 2022</span>
               <span class="article-data-spacer"></span>
               <span>8 min read</span>
+
+              <h3 class="title article-title">Is Agric the future?</h3>
             </div>
-            <h3 class="title article-title">Is Agric the future?</h3>
-          </div>
-        </a>
+          </a>
+        </div>
       </div>
     </section>
     <!--Quick read-->
