--- a/asset/index.html
+++ b/asset/index.html
@@ -114,12 +114,13 @@
             <span class="article-category">Animal</span>
 
             <div class="article-data-container">
-              <div class="article-data"></div>
-              <span>Dec 5th 2022</span>
-              <span class="article-data-spacer"></span>
-              <span>8 min read</span>
+              <div class="article-data">
+                <span>Dec 5th 2022</span>
+                <span class="article-data-spacer"></span>
+                <span>8 min read</span>
+              </div>
+              <h3 class="title article-title">Is Agric the future?</h3>
             </div>
-            <h3 class="title article-title">Is Agric the future?</h3>
           </a>
 
           <a href="" class="article featured-article featured-article-2">
@@ -131,12 +132,13 @@
             <span class="article-category">Animal</span>
 
             <div class="article-data-container">
-              <div class="article-data"></div>
-              <span>Dec 5th 2022</span>
-              <span class="article-data-spacer"></span>
-              <span>8 min read</span>
+              <div class="article-data">
+                <span>Dec 5th 2022</span>
+                <span class="article-data-spacer"></span>
+                <span>8 min read</span>
+              </div>
+              <h3 class="title article-title">Is Agric the future?</h3>
             </div>
-            <h3 class="title article-title">Is Agric the future?</h3>
           </a>
           <a href="" class="article featured-article featured-article-3">
             <img
@@ -147,12 +149,131 @@
             <span class="article-category">Animal</span>
 
             <div class="article-data-container">
-              <div class="article-data"></div>
-              <span>Dec 5th 2022</span>
-              <span class="article-data-spacer"></span>
-              <span>8 min read</span>
-
+              <div class="article-data">
+                <span>Dec 5th 2022</span>
+                <span class="article-data-spacer"></span>
+                <span>8 min read</span>
+              </div>
               <h3 class="title article-title">Is Agric the future?</h3>
+            </div>
+          </a>
+        </div>
+        <!--Sidebar-->
+        <div class="sidebar d-grid">
+          <h3 class="title featured content-title">Trending News</h3>
+          <a href="" class="trending-news-box">
+            <div class="trending-news-image-box">
+              <span class="trending-number place-items-center">O1</span>
+              <img
+                src="./img/kellen-riggin-k4QEvZQ3GMU-unsplash.jpg"
+                alt=""
+                class="article-image"
+              />
+            </div>
+            <div class="trending-news-data">
+              <div class="article-data">
+                <span>Dec 5ht 2021</span>
+                <span class="article-data-spacer"></span>
+                <span>8 mins read</span>
+              </div>
+
+              <h3 class="title article-title">Sample Article title</h3>
+            </div>
+          </a>
+
+          <a href="" class="trending-news-box">
+            <div class="trending-news-image-box">
+              <span class="trending-number place-items-center">O1</span>
+              <img
+                src="./img/kellen-riggin-k4QEvZQ3GMU-unsplash.jpg"
+                alt=""
+                class="article-image"
+              />
+            </div>
+            <div class="trending-news-data">
+              <div class="article-data">
+                <span>Dec 5ht 2021</span>
+                <span class="article-data-spacer"></span>
+                <span>8 mins read</span>
+              </div>
+
+              <h3 class="title article-title">Sample Article title</h3>
+            </div>
+          </a>
+          <a href="" class="trending-news-box">
+            <div class="trending-news-image-box">
+              <span class="trending-number place-items-center">O2</span>
+              <img
+                src="./img/kellen-riggin-k4QEvZQ3GMU-unsplash.jpg"
+                alt=""
+                class="article-image"
+              />
+            </div>
+            <div class="trending-news-data">
+              <div class="article-data">
+                <span>Dec 5ht 2021</span>
+                <span class="article-data-spacer"></span>
+                <span>8 mins read</span>
+              </div>
+
+              <h3 class="title article-title">Sample Article title</h3>
+            </div>
+          </a>
+          <a href="" class="trending-news-box">
+            <div class="trending-news-image-box">
+              <span class="trending-number place-items-center">O3</span>
+              <img
+                src="./img/kellen-riggin-k4QEvZQ3GMU-unsplash.jpg"
+                alt=""
+                class="article-image"
+              />
+            </div>
+            <div class="trending-news-data">
+              <div class="article-data">
+                <span>Dec 5ht 2021</span>
+                <span class="article-data-spacer"></span>
+                <span>8 mins read</span>
+              </div>
+
+              <h3 class="title article-title">Sample Article title</h3>
+            </div>
+          </a>
+          <a href="" class="trending-news-box">
+            <div class="trending-news-image-box">
+              <span class="trending-number place-items-center">O4</span>
+              <img
+                src="./img/kellen-riggin-k4QEvZQ3GMU-unsplash.jpg"
+                alt=""
+                class="article-image"
+              />
+            </div>
+            <div class="trending-news-data">
+              <div class="article-data">
+                <span>Dec 5ht 2021</span>
+                <span class="article-data-spacer"></span>
+                <span>8 mins read</span>
+              </div>
+
+              <h3 class="title article-title">Sample Article title</h3>
+            </div>
+          </a>
+          <a href="" class="trending-news-box">
+            <div class="trending-news-image-box">
+              <span class="trending-number place-items-center">O5</span>
+              <img
+                src="./img/kellen-riggin-k4QEvZQ3GMU-unsplash.jpg"
+                alt=""
+                class="article-image"
+              />
+            </div>
+            <div class="trending-news-data">
+              <div class="article-data">
+                <span>Dec 5ht 2021</span>
+                <span class="article-data-spacer"></span>
+                <span>8 mins read</span>
+              </div>
+
+              <h3 class="title article-title">Sample Article title</h3>
             </div>
           </a>
         </div>
