--- a/asset/index.html
+++ b/asset/index.html
@@ -280,7 +280,96 @@
       </div>
     </section>
     <!--Quick read-->
+    <section class="quick-read section">
+      <div class="container">
+        <h2 class="title section-title" data-name="Quick-read">Quick-read</h2>
 
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <a href="" class="article swiper-slide">
+              <img
+                src="./img/surface-QpZNPGj0hk8-unsplash.jpg"
+                alt=""
+                class="article-image"
+              />
+
+              <div class="article-data-container">
+                <div class="article-data">
+                  <span>Dec 5th 2022</span>
+                  <span class="article-data-spacer"></span>
+                  <span>8 min read</span>
+                </div>
+                <h3 class="title article-title">Is Agric the future?</h3>
+              </div>
+            </a>
+            <a href="" class="article swiper-slide">
+              <img
+                src="./img/surface-QpZNPGj0hk8-unsplash.jpg"
+                alt=""
+                class="article-image"
+              />
+
+              <div class="article-data-container">
+                <div class="article-data">
+                  <span>Dec 5th 2022</span>
+                  <span class="article-data-spacer"></span>
+                  <span>8 min read</span>
+                </div>
+                <h3 class="title article-title">Is Agric the future?</h3>
+              </div>
+            </a>
+            <a href="" class="article swiper-slide">
+              <img
+                src="./img/surface-QpZNPGj0hk8-unsplash.jpg"
+                alt=""
+                class="article-image"
+              />
+
+              <div class="article-data-container">
+                <div class="article-data">
+                  <span>Dec 5th 2022</span>
+                  <span class="article-data-spacer"></span>
+                  <span>8 min read</span>
+                </div>
+                <h3 class="title article-title">Is Agric the future?</h3>
+              </div>
+            </a>
+            <a href="" class="article swiper-slide">
+              <img
+                src="./img/surface-QpZNPGj0hk8-unsplash.jpg"
+                alt=""
+                class="article-image"
+              />
+
+              <div class="article-data-container">
+                <div class="article-data">
+                  <span>Dec 5th 2022</span>
+                  <span class="article-data-spacer"></span>
+                  <span>8 min read</span>
+                </div>
+                <h3 class="title article-title">Is Agric the future?</h3>
+              </div>
+            </a>
+            <a href="" class="article swiper-slide">
+              <img
+                src="./img/surface-QpZNPGj0hk8-unsplash.jpg"
+                alt=""
+                class="article-image"
+              />
+
+              <div class="article-data-container">
+                <div class="article-data">
+                  <span>Dec 5th 2022</span>
+                  <span class="article-data-spacer"></span>
+                  <span>8 min read</span>
+                </div>
+                <h3 class="title article-title">Is Agric the future?</h3>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--Older Post-->
 
     <!--Popurlar Tags-->
