--- a/asset/index.html
+++ b/asset/index.html
@@ -367,6 +367,10 @@
               </div>
             </a>
           </div>
+          <div class="swiper-button-prev swiper-controls"></div>
+          <div class="swiper-button-next swiper-controls"></div>
+
+          <div class="swiper-pagination"></div>
         </div>
       </div>
     </section>
