--- a/asset/index.html
+++ b/asset/index.html
@@ -535,8 +535,88 @@
         </div>
       </div>
     </section>
-    <!--Newletter-->
 
+    <!--Popular Tags-->
+    <section class="popular-tags section">
+      <div class="container">
+        <h2 class="title section-title" data-name="Popular-Tags">
+          Popular Tags
+        </h2>
+        <div class="popular-tags-container d-grid">
+          <a href="" class="article">
+            <span class="tag-name">#travel</span>
+            <img
+              src="./img/brad-fickeisen-NRWbwA-jai4-unsplash.jpg"
+              alt=""
+              class="article-image"
+            />
+          </a>
+          <a href="" class="article">
+            <span class="tag-name">#travel</span>
+            <img
+              src="./img/brad-fickeisen-NRWbwA-jai4-unsplash.jpg"
+              alt=""
+              class="article-image"
+            />
+          </a>
+          <a href="" class="article">
+            <span class="tag-name">#travel</span>
+            <img
+              src="./img/brad-fickeisen-NRWbwA-jai4-unsplash.jpg"
+              alt=""
+              class="article-image"
+            />
+          </a>
+          <a href="" class="article">
+            <span class="tag-name">#travel</span>
+            <img
+              src="./img/brad-fickeisen-NRWbwA-jai4-unsplash.jpg"
+              alt=""
+              class="article-image"
+            />
+          </a>
+          <a href="" class="article">
+            <span class="tag-name">#travel</span>
+            <img
+              src="./img/brad-fickeisen-NRWbwA-jai4-unsplash.jpg"
+              alt=""
+              class="article-image"
+            />
+          </a>
+          <a href="" class="article">
+            <span class="tag-name">#travel</span>
+            <img
+              src="./img/brad-fickeisen-NRWbwA-jai4-unsplash.jpg"
+              alt=""
+              class="article-image"
+            />
+          </a>
+        </div>
+      </div>
+    </section>
+    <!--Newletter-->
+    <section class="newsletter section">
+      <div class="container">
+        <h2 class="title section-title" data-name="Newsletter">Newsletter</h2>
+        <div class="form-container-inner">
+          <h6 class="title newsletter-inner">Subscribe</h6>
+          <p class="newletter-description">
+            lorem ipsum dolor sit amet, consectetur adip
+          </p>
+
+          <form action="" class="form">
+            <input
+              type="text"
+              class="form-input"
+              placeholder="Enter your email address"
+            />
+            <button class="btn form-btn" type="submit">
+              <i class="ri-mail-send-line"></i>
+            </button>
+          </form>
+        </div>
+      </div>
+    </section>
     <!--Footer-->
 
     <!--- Swiper JS-->
