--- a/asset/index.html
+++ b/asset/index.html
@@ -599,7 +599,7 @@
       <div class="container">
         <h2 class="title section-title" data-name="Newsletter">Newsletter</h2>
         <div class="form-container-inner">
-          <h6 class="title newsletter-inner">Subscribe</h6>
+          <h6 class="title newsletter-title">Subscribe</h6>
           <p class="newletter-description">
             lorem ipsum dolor sit amet, consectetur adip
           </p>
@@ -618,7 +618,35 @@
       </div>
     </section>
     <!--Footer-->
-
+    <footer class="footer section">
+      <div class="footer-container contianer d-grid">
+        <div class="company-data">
+          <a href="/index.html">
+            <h2 class="logo">NewsFlash</h2>
+          </a>
+          <p class="company-description">lorem ipsum dolor sit amet</p>
+          <ul class="list social-media">
+            <li class="list-item">
+              <a href="" class="list-link">
+                <i class="ri-instagram-line"></i>
+              </a>
+              <a href="" class="list-link">
+                <i class="ri-twitter-line"></i>
+              </a>
+              <a href="" class="list-link">
+                <i class="ri-github-line"></i>
+              </a>
+              <a href="" class="list-link">
+                <i class="ri-whatsapp-line"></i>
+              </a>
+            </li>
+          </ul>
+          <span class="copyright-notice"
+            >&copy; 2022 | LekeJosh. All Rights reserved
+          </span>
+        </div>
+      </div>
+    </footer>
     <!--- Swiper JS-->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <!--Custom Script-->
