--- a/asset/index.html
+++ b/asset/index.html
@@ -645,6 +645,73 @@
             >&copy; 2022 | LekeJosh. All Rights reserved
           </span>
         </div>
+        <div>
+          <h6 class="title footer-title">Categories</h6>
+          <ul class="list footer-list">
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+          </ul>
+
+          <h6 class="title footer-title">Company</h6>
+          <ul class="list footer-list">
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+          </ul>
+
+          <h6 class="title footer-title">Useful Link</h6>
+          <ul class="list footer-list">
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list-link">Sample Item</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <!--- Swiper JS-->
