--- a/asset/index.html
+++ b/asset/index.html
@@ -617,6 +617,7 @@
         </div>
       </div>
     </section>
+    <!--Blog Post-->
     <!--Footer-->
     <footer class="footer section">
       <div class="footer-container contianer d-grid">
@@ -667,7 +668,8 @@
               <a href="" class="list-link">Sample Item</a>
             </li>
           </ul>
-
+        </div>
+        <div>
           <h6 class="title footer-title">Company</h6>
           <ul class="list footer-list">
             <li class="list-item">
@@ -689,7 +691,8 @@
               <a href="" class="list-link">Sample Item</a>
             </li>
           </ul>
-
+        </div>
+        <div>
           <h6 class="title footer-title">Useful Link</h6>
           <ul class="list footer-list">
             <li class="list-item">
