--- a/asset/index.html
+++ b/asset/index.html
@@ -618,6 +618,64 @@
       </div>
     </section>
     <!--Blog Post-->
+    <section class="blog-post section-header-offeset">
+      <div class="blog-post-container container">
+        <div class="blog-post-data">
+          <h3 class="title blog-post-title">Is VR the future?</h3>
+          <div class="article-data">
+            <span>Dec 6th 2021</span>
+            <span class="article-data-spacer"></span>
+            <span>4 min read</span>
+          </div>
+          <img src="./img/istockphoto-1313584277-1024x1024.jpg" alt="">
+        </div>
+        <div class="container">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Fuga odit dolores aliquam a, maiores libero illo assumenda odio blanditiis ullam! 
+            Ex consequuntur quam et cupiditate est maiores dicta voluptate! Odit.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Fuga odit dolores aliquam a, maiores libero illo assumenda odio blanditiis ullam! 
+            Ex consequuntur quam et cupiditate est maiores dicta voluptate! Odit.</p>
+            <blockquote class="quote">
+              <p>
+                <span><i class="ri-double-quotes-l"></i></span>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Fuga odit dolores aliquam a, maiores libero illo assumenda odio blanditiis ullam! 
+            Ex consequuntur quam et cupiditate est maiores dicta voluptate! Odit.<span><i class="ri-double-quotes-r"></i></span>
+              </p>
+            </blockquote>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Fuga odit dolores aliquam a, maiores libero illo assumenda odio blanditiis ullam! 
+            Ex consequuntur quam et cupiditate est maiores dicta voluptate! Odit.</p>
+
+            <div class="author d-grid">
+              <div class="author-image-box">
+                <img src="./img/mery-khachatryan-c-neUePyOzM-unsplash.jpg" alt="" class="article-image">
+              </div>
+              <div class="author-about">
+                <h3 class="author-name">Adeleke Joshua</h3>
+                <p>lorem ipsum dolor sit amet, consectetur adip</p>
+                <ul class="list social-media">
+                  <li class="list-item">
+                    <a href="" class="list-link">
+                      <i class="ri-instagram-line"></i>
+                    </a>
+                    <a href="" class="list-link">
+                      <i class="ri-twitter-line"></i>
+                    </a>
+                    <a href="" class="list-link">
+                      <i class="ri-github-line"></i>
+                    </a>
+                    <a href="" class="list-link">
+                      <i class="ri-whatsapp-line"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </div>
+
+      </div>
+    </sectio>
     <!--Footer-->
     <footer class="footer section">
       <div class="footer-container contianer d-grid">
