--- a/asset/index.html
+++ b/asset/index.html
@@ -692,7 +692,7 @@
     </section>
     <!--Footer-->
     <footer class="footer section">
-      <div class="footer-container contianer d-grid">
+      <div class="footer-container container d-grid">
         <div class="company-data">
           <a href="/index.html">
             <h2 class="logo">NewsFlash</h2>
