Variables for Api

--- a/asset/index.html
+++ b/asset/index.html
@@ -27,19 +27,19 @@
         <div class="menu" id="menu">
           <ul class="list">
             <li class="list-item">
-              <a href="#" class="lisk-link current">Home</a>
+              <a href="#" class="lisk-link current" id="general">Home</a>
             </li>
             <li class="list-item">
-              <a href="#" class="lisk-link">Football</a>
+              <a href="#" class="lisk-link" id="sports">Sports</a>
             </li>
             <li class="list-item">
-              <a href="#" class="lisk-link">Stocks</a>
+              <a href="#" class="lisk-link" id="stocks">Stocks</a>
             </li>
             <li class="list-item">
-              <a href="#" class="lisk-link">Weather news</a>
+              <a href="#" class="lisk-link" id="weather">Weather news</a>
             </li>
             <li class="list-item">
-              <a href="#" class="lisk-link">Crypto</a>
+              <a href="#" class="lisk-link" id="crypto">Crypto</a>
             </li>
             <li class="list-item screen-lg-hidden">
               <a href="#" class="lisk-link">More News</a>
