Arrays and Apis

--- a/asset/index.html
+++ b/asset/index.html
@@ -84,6 +84,7 @@
           <input
             type="text"
             class="form-input"
+            id="newsQuery"
             placeholder="What are you looking for?"
           />
           <button class="btn form-btn" type="submit">
