--- a/asset/index.html
+++ b/asset/index.html
@@ -33,13 +33,13 @@
               <a href="#" class="lisk-link" id="sports">Sports</a>
             </li>
             <li class="list-item">
-              <a href="#" class="lisk-link" id="stocks">Stocks</a>
+              <a href="#" class="lisk-link" id="business">Business</a>
             </li>
-            <li class="list-item">
+            <!-- <li class="list-item">
               <a href="#" class="lisk-link" id="weather">Weather news</a>
-            </li>
+            </li> -->
             <li class="list-item">
-              <a href="#" class="lisk-link" id="crypto">Crypto</a>
+              <a href="#" class="lisk-link" id="technology">Technology</a>
             </li>
             <li class="list-item screen-lg-hidden">
               <a href="#" class="lisk-link">More News</a>
