--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             </div>
             <div class="trending-news-data">
               <div class="article-data">
-                <span>Dec 5ht 2021</span>
+                <span>Dec 5th 2021</span>
                 <span class="article-data-spacer"></span>
                 <span>8 mins read</span>
               </div>
@@ -193,7 +193,7 @@
             </div>
             <div class="trending-news-data">
               <div class="article-data">
-                <span>Dec 5ht 2021</span>
+                <span>Dec 5th 2021</span>
                 <span class="article-data-spacer"></span>
                 <span>8 mins read</span>
               </div>
@@ -212,7 +212,7 @@
             </div>
             <div class="trending-news-data">
               <div class="article-data">
-                <span>Dec 5ht 2021</span>
+                <span>Dec 5th 2021</span>
                 <span class="article-data-spacer"></span>
                 <span>8 mins read</span>
               </div>
@@ -231,7 +231,7 @@
             </div>
             <div class="trending-news-data">
               <div class="article-data">
-                <span>Dec 5ht 2021</span>
+                <span>Dec 5th 2021</span>
                 <span class="article-data-spacer"></span>
                 <span>8 mins read</span>
               </div>
@@ -250,7 +250,7 @@
             </div>
             <div class="trending-news-data">
               <div class="article-data">
-                <span>Dec 5ht 2021</span>
+                <span>Dec 5th 2021</span>
                 <span class="article-data-spacer"></span>
                 <span>8 mins read</span>
               </div>
@@ -269,7 +269,7 @@
             </div>
             <div class="trending-news-data">
               <div class="article-data">
-                <span>Dec 5ht 2021</span>
+                <span>Dec 5th 2021</span>
                 <span class="article-data-spacer"></span>
                 <span>8 mins read</span>
               </div>
